Kubernetes_Practice/EKS-Project-Sample/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-app
  namespace: board-app-eks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board-app
  template:
    metadata:
      labels:
        app: board-app
    spec:
      containers:
        - name: board-app-container
          image: <ECR주소>  
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
