Kubernetes_Practice/EKS-Project-Sample/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "http-ingress"
  labels:
    app.kubernetes.io/name: "http-ingress"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - host: <도메인>  
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: board-app-svc
                port:
                  number: 80
